add a secret key and instractions for every page

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,9 +10,9 @@
 {% endwith %}
 <h1>Instruction</h1>
 <p>1. В навигационной панели сверху выбираем, чье КПД будем считать</p>
-<p>2. С помощью кнопки "Choose files" или перетащив мышкой загружаем нужное кол-во файлов (можно все сразу)</p>
-<p>3. Нажимаем "Upload". Если вернуло на Home page(эту страницу), значит всё норм</p>
+<p>2. С помощью кнопки "Choose files" или перетащив мышкой загружаем нужные файлы</p>
+<p>3. Нажимаем "Upload". Если вернуло на Home page(эту страницу) и появилось сообщение об успешном подсчете, значит всё норм</p>
 <p>4. ???</p>
 <p>5. Profit</p>
-<p>6. Результат <a href="https://docs.google.com/spreadsheets/d/1_Pby1bSPXGnih5K7d0iTYdbyE_HZPLv2t3oW1RooYiw/edit?gid=23367678#gid=23367678">тут</a></p>
+<p>Результат <a href="https://docs.google.com/spreadsheets/d/1_Pby1bSPXGnih5K7d0iTYdbyE_HZPLv2t3oW1RooYiw/edit?gid=23367678#gid=23367678">тут</a></p>
 {% endblock %}
