--- a/templates/infobip.html
+++ b/templates/infobip.html
@@ -6,5 +6,10 @@
         <input type="file" name="file" multiple>
         <input type="submit" value="Upload">
     </form>
+    <h1>Instruction</h1>
+    <p>Для подсчета кпд Infobip нужны следующие файлы:</p>
+    <p>1. КПД ММ УР.csv;</p>
+    <p>2. Час 0-1 ММ Самокат.csv</p>
+    <p>3. Архив (zip) с отчетом в формате CSV</p>
 {% endblock %}
 </html>
