--- a/templates/teamleader.html
+++ b/templates/teamleader.html
@@ -6,5 +6,9 @@
         <input type="file" name="file" multiple>
         <input type="submit" value="Upload">
     </form>
+    <h1>Instruction</h1>
+    <p>Для подсчета кпд Тимлидеров нужны следующие файлы:</p>
+    <p>1. КПД ТЛ время.csv;</p>
+    <p>2. Архив (zip) с отчетом в формате CSV</p>
 {% endblock %}
 </html>
