--- a/templates/tech.html
+++ b/templates/tech.html
@@ -6,5 +6,10 @@
         <input type="file" name="file" multiple>
         <input type="submit" value="Upload">
     </form>
+    <h1>Instruction</h1>
+    <p>Для подсчета кпд Техники нужны следующие файлы:</p>
+    <p>1. КПД Техника.csv;</p>
+    <p>2. КПД Техника час 0-1.csv</p>
+    <p>3. Архив (zip) с отчетом в формате CSV</p>
 {% endblock %}
 </html>
