--- a/templates/jira.html
+++ b/templates/jira.html
@@ -6,5 +6,9 @@
         <input type="file" name="file" multiple>
         <input type="submit" value="Upload">
     </form>
+    <h1>Instruction</h1>
+    <p>Для подсчета кпд Jira нужны следующие файлы:</p>
+    <p>1. Время в статусе Доп_ Канал.csv;</p>
+    <p>2. Файл экспорта из дашборда джиры с закрытыми тикетами в формате CSV </p>
 {% endblock %}
 </html>
